Fixed spacing in menu

--- a/css/app.css
+++ b/css/app.css
@@ -189,3 +189,8 @@
 .vertical-align {
   padding-top: 5px;
 }
+.more-modules {
+  font-size: 0.9em;
+  margin-bottom: 5px;
+  text-align: right;
+}
